set default params for yam

--- a/robot_configs/yam/left.yaml
+++ b/robot_configs/yam/left.yaml
@@ -20,15 +20,28 @@ motor_chain:
 xml_path: "dependencies/i2rt/i2rt/robot_models/yam/yam.xml"
 gravity_comp_factor: 1.3
 gripper_index: 6
-kp: [80, 80, 80, 10, 10, 10, 20]
+# repo values
+# kp: [80, 80, 80, 10, 10, 10, 20]
+# kd: [5, 5, 5, 1.5, 1.5, 1.5, 0.5]
+# joint_limits:
+#   - [-2.09, 3.14]
+#   - [0, 3.14]
+#   - [0.05, 3.14]
+#   - [-1.35, 1.35]
+#   - [-1.50, 1.50]
+#   - [-2.00, 2.00]
+# gripper_limits: [0.0, -2.4] # a smaller opening, full opening is -2.7
+
+# i2rt default values
+kp: [80, 80, 80, 40, 10, 10, 20]
 kd: [5, 5, 5, 1.5, 1.5, 1.5, 0.5]
 joint_limits:
-  - [-2.09, 3.14]
-  - [0, 3.14]
-  - [0.05, 3.14]
-  - [-1.35, 1.35]
-  - [-1.50, 1.50]
-  - [-2.00, 2.00]
-gripper_limits: [0.0, -2.4] # a smaller opening, full opening is -2.7
+  - [-2.767, 3.28]
+  - [-0.15, 3.80]
+  - [-0.15, 3.28]
+  - [-1.72, 1.72]
+  - [-1.72, 1.72]
+  - [-2.24, 2.24]
+gripper_limits: [0.0, -2.7] 
 limit_gripper_force: 50.0
 # gripper_type: "yam_small"
