--- a/configs/yam_replay_bimanual.yaml
+++ b/configs/yam_replay_bimanual.yaml
@@ -14,11 +14,9 @@ robots:
   right: ["robot_configs/yam/left.yaml", "robot_configs/yam/right.yaml"]
 
 agent:
-  _target_: robots_realtime.agents.teleoperation.yam_pyroki_viser_agent.YamPyrokiViserAgent
-  bimanual: true
-  right_arm_extrinsic:
-      position: [0.0, -0.61, 0.0]
-      rotation: [1.0, 0.0, 0.0, 0.0]
+  _target_: robots_realtime.agents.replay_agent.ReplayAgent
+  episode_dir: "xdof_epi" # REPLACE THIS with your actual episode path
+  loop: false
 
 station_metadata:
   world_frame: "left_arm" # front x, left y, up z
