initial camera test

--- a/configs/yam_replay_bimanual.yaml
+++ b/configs/yam_replay_bimanual.yaml
@@ -3,11 +3,23 @@ _target_: robots_realtime.envs.launch.LaunchConfig
 # sensors:
 #   cameras:
 #     top_camera:
-#         _target_: robots_realtime.sensors.cameras.camera.CameraNode
-#         camera:
-#             _target_: robots_realtime.sensors.cameras.opencv_camera.OpencvCamera
-#             device_path: "/dev/video4"
-#             camera_type: "realsense_camera"
+#       _target_: robots_realtime.sensors.cameras.camera.CameraNode
+#       camera:
+#         _target_: robots_realtime.sensors.cameras.opencv_camera.OpencvCamera
+#         device_path: "/dev/video4"   # Intel RealSense on usb-0000:00:14.0-1
+#         camera_type: "realsense_camera"
+#     right_camera:
+#       _target_: robots_realtime.sensors.cameras.camera.CameraNode
+#       camera:
+#         _target_: robots_realtime.sensors.cameras.opencv_camera.OpencvCamera
+#         device_path: "/dev/video16"  # Intel RealSense on usb-0000:00:14.0-10
+#         camera_type: "realsense_camera"
+#     left_camera:
+#       _target_: robots_realtime.sensors.cameras.camera.CameraNode
+#       camera:
+#         _target_: robots_realtime.sensors.cameras.opencv_camera.OpencvCamera
+#         device_path: "/dev/video10"  # Intel RealSense on usb-0000:00:14.0-2
+#         camera_type: "realsense_camera"
 
 robots:
   left: ["robot_configs/yam/left.yaml"]
