--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "minimalmodbus",
     "i2rt",
     "ipdb>=0.13.13",
+    "pyrealsense2>=2.56.5.9235",
 ]
 
 [project.optional-dependencies]
