--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "i2rt",
     "ipdb>=0.13.13",
     "pyrealsense2>=2.56.5.9235",
+    "mink>=0.0.13",
 ]
 
 [project.optional-dependencies]
