molmoact agent in progress

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "ipdb>=0.13.13",
     "pyrealsense2>=2.56.5.9235",
     "mink>=0.0.13",
+    "wandb>=0.23.1",
 ]
 
 [project.optional-dependencies]
