--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,15 @@ dependencies = [
     "mink>=0.0.13",
     "wandb>=0.23.1",
     "imageio[ffmpeg]>=2.37.2",
+    "einops>=0.8.1",
+    "huggingface-hub==0.36.0",
+    "transformers==4.52.3",
+    "torchao==0.10.0",
+    "torch==2.7.0",
+    "torchvision==0.22.0",
+    "torchaudio==2.7.0",
+    "diffusers==0.35.2",
+    "accelerate==1.11.0",
 ]
 
 [project.optional-dependencies]
