--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,13 @@ dependencies = [
     "torchaudio==2.7.0",
     "diffusers==0.35.2",
     "accelerate==1.11.0",
+    "timm==1.0.22",
+    "hydra-core>=1.3.2",
+    "positional-encodings>=6.0.3",
+    "h5py>=3.15.1",
+    "torchcodec==0.5.0",
+    "vector-quantize-pytorch==1.25.1",
+    "ipykernel>=7.1.0",
 ]
 
 [project.optional-dependencies]
