--- a/configs/yam_molmoact_bimanual.yaml
+++ b/configs/yam_molmoact_bimanual.yaml
@@ -27,15 +27,15 @@ robots:
 
 agent:
   _target_: robots_realtime.agents.policy_learning.molmoact_agent.MolmoActAgent
-  checkpoint: "checkpoints/handoff_24000/"
-  task_description: handoff
+  checkpoint: "checkpoints/1224_throw_bottle_60000/"
+  task_description: "throw plastic bottles in bin"
   action_chunk: 16
   debug: false
   motion_tokenizer_checkpoint: /home/zixuan/robots_realtime/checkpoints/xdof_all_cs30_tokenizer/latest.pt
   resize_to_train_shape: true
   train_shape: [224, 168]
 
-dataset_observation_dir: "../xdof_epi/handoff_3_low/" # REPLACE THIS with your actual dataset directory
+# dataset_observation_dir: "../xdof_epi/throw_bottle_1/" # REPLACE THIS with your actual dataset directory
 action_threshold: 1 # Threshold for action comparison (not used with ReplayAgent, but required)
 hz: 30
 station_metadata:
@@ -60,5 +60,5 @@ home_pos:
   - 0.0158
   - -0.0120
 
-max_steps: 250
+max_steps: 5000
 
