--- a/configs/yam_openpi_bimanual.yaml
+++ b/configs/yam_openpi_bimanual.yaml
@@ -26,11 +26,13 @@ robots:
   right: ["robot_configs/yam/left.yaml", "robot_configs/yam/right.yaml"]
 
 agent:
-  _target_: robots_realtime.agents.replay_agent.ReplayAgent
-  # episode_dir: "../xdof_epi/handoff_2/" 
-  episode_dir: "../xdof_epi/throw_bottle_1/" 
-  loop: false
+  _target_: robots_realtime.agents.policy_learning.async_pi0_agent.AsyncPi0Agent
+  action_horizon: 25
 
+
+# dataset_observation_dir: "../xdof_epi/throw_bottle_1/" # REPLACE THIS with your actual dataset directory
+action_threshold: 1 # Threshold for action comparison (not used with ReplayAgent, but required)
+hz: 30
 station_metadata:
   world_frame: "left_arm" # front x, left y, up z
   extrinsics:
@@ -53,4 +55,5 @@ home_pos:
   - 0.0158
   - -0.0120
 
-max_steps: 500
+max_steps: 5000
+
