--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,12 @@ dependencies = [
     "imageio[ffmpeg]>=2.37.2",
     "einops>=0.8.1",
     "huggingface-hub==0.36.0",
-    "transformers==4.52.3",
+    "transformers==4.53.2",
+    "openpi",
     "torchao==0.10.0",
-    "torch==2.7.0",
-    "torchvision==0.22.0",
-    "torchaudio==2.7.0",
+    "torch>=2.8.0",
+    "torchvision>=0.23.0",
+    "torchaudio>=2.8.0",
     "diffusers==0.35.2",
     "accelerate==1.11.0",
     "timm==1.0.22",
@@ -62,12 +63,13 @@ franka_panda = [
 panda_python = { path = "dependencies/panda_py_0.7.5_libfranka_0.10.0/panda_python-0.7.5+libfranka.0.10.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
 pyzed = { path = "dependencies/pyzed-5.1-cp311-cp311-linux_x86_64.whl" }
 i2rt = { path = "dependencies/i2rt", editable = true }
+openpi = { path = "/home/zixuan/dev_yunchu/FAR-pi/rfmpi/third_party/openpi", editable = true }
 
 [tool.uv]
 override-dependencies = [
     "numpy==1.26.4",
-    "jax==0.4.26",
-    "jaxlib==0.4.26",
+    "jax[cuda12]==0.5.3",
+    "jaxlib==0.5.3",
 ]
 
 [tool.setuptools.packages.find]
