bottle throwing works

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "torchcodec==0.5.0",
     "vector-quantize-pytorch==1.25.1",
     "ipykernel>=7.1.0",
+    "pytest>=9.0.2",
 ]
 
 [project.optional-dependencies]
