--- a/configs/yam_molmoact_bimanual.yaml
+++ b/configs/yam_molmoact_bimanual.yaml
@@ -27,17 +27,20 @@ robots:
 
 agent:
   _target_: robots_realtime.agents.policy_learning.molmoact_agent.MolmoActAgent
-  checkpoint: "checkpoints/1228_xdof_clear_bottle_aug_from_pretrain_small_lr/"
+  checkpoint: "checkpoints/1228_xdof_bottle_old_pt160k_aug_step76000-hf"
   # checkpoint: "checkpoints/1224_throw_bottle_60000/"
   task_description: "throw plastic bottles in bin"
   action_chunk: 16
   debug: false
-  motion_tokenizer_checkpoint: /home/zixuan/robots_realtime/checkpoints/xdof_all_cs30_tokenizer/latest.pt
+  motion_tokenizer_checkpoint: checkpoints/xdof_all_cs30_tokenizer/latest.pt
   resize_to_train_shape: true
   train_shape: [224, 168]
-  unnorm_key: "rel_16"
+  unnorm_key: "flow_tokenized"
+  # unnorm_key: "rel_16"
+  center_crop_scale: 0.95
+  crop_top_only: false
 
-dataset_observation_dir: "../xdof_epi/throw_bottle_1/" # REPLACE THIS with your actual dataset directory
+# dataset_observation_dir: "../xdof_epi/throw_bottle_1/" # REPLACE THIS with your actual dataset directory
 action_threshold: 1 # Threshold for action comparison (not used with ReplayAgent, but required)
 hz: 30
 station_metadata:
