--- a/configs/yam_replay_bimanual.yaml
+++ b/configs/yam_replay_bimanual.yaml
@@ -28,8 +28,8 @@ robots:
 agent:
   _target_: robots_realtime.agents.replay_agent.ReplayAgent
   # episode_dir: "../xdof_epi/handoff_2/" 
-  # episode_dir: "../xdof_epi/throw_bottle_1/" 
-  episode_dir: "/home/zixuan/robots_realtime/teleop_trajectories/2/" 
+  episode_dir: "../xdof_epi/throw_bottle_1/" 
+  # episode_dir: "/home/zixuan/robots_realtime/teleop_trajectories/2/" 
   loop: false
 
 station_metadata:
@@ -54,4 +54,4 @@ home_pos:
   - 0.0158
   - -0.0120
 
-max_steps: 500
+max_steps: 3000
