--- a/configs/yam_molmoact_bimanual.yaml
+++ b/configs/yam_molmoact_bimanual.yaml
@@ -41,8 +41,9 @@ agent:
   crop_top_only: false
 
 # dataset_observation_dir: "../xdof_epi/throw_bottle_1/" # REPLACE THIS with your actual dataset directory
-action_threshold: 1 # Threshold for action comparison (not used with ReplayAgent, but required)
+# action_threshold: 1 # Threshold for action comparison (not used with ReplayAgent, but required)
 hz: 20
+save_path: "experiments/test_epi2"
 station_metadata:
   world_frame: "left_arm" # front x, left y, up z
   extrinsics:
